--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 
     <nav>
         <div class="main-nav container flex">
             <a href="#" onclick="reload()" class="website-logo" >
-            <img src="./assets/logo.png" alt="website-logo">
+            <img src="logo.png" alt="website-logo">
             </a>
             <div class="nav-links">
                 <ul class="flex">
